<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">PTEL Mobile [unofficial]</string>

    <string name="balance_update">Balance update received</string>
    <string name="call_customer_care">Call Customer Care</string>
    <string name="check_balance">Check balance</string>

    <string name="expiration_days_alarm">Expiration Days Alarm</string>

    <string name="low_credit_alarm">Low Balance Alarm…</string>

    <string name="notification_balance_body">Your credit is low.</string>
    <string name="notification_balance_title">PTEL Mobile - Low Balance</string>
    <string name="notification_expiry_body">Your credit will expire soon.</string>
    <string name="notification_expiry_title">PTEL Mobile - Credit Expiring</string>
    <string name="notification.expiry_balance.body">Your credit is low and will expire soon.</string>
    <string name="notification.expiry_balance.title">PTEL Mobile - Low/expiring credit</string>

    <string name="settings">Settings</string>

    <string name="warn_credit_will_expire">Warn me if balance will expire in less than…</string>
    <string name="warn_low_credit">Warn me if balance gets bellow…</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
    </string>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

</resources>
