<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobi.ccjr.ptel.fragment.FirstRunFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/large_padding"
        android:text="@string/welcome"
        android:textSize="@dimen/big_text"
        android:id="@+id/first_run_welcome"/>

    <TextView
        android:id="@+id/first_run_welcome_text"
        android:layout_below="@+id/first_run_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="@dimen/read_text"
        android:padding="@dimen/large_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_balance"
        android:id="@+id/check_balance"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
